[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/enemy_bullet.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/MovingBall.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 80, 64, 0, 0, 0, 0, 976, 64, 0, 0, 0, 0, 976, 552, 0, 0, 0, 0, 80, 552, 0, 0, 0, 0, 80, 64 )
}

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[node name="MovingBall" type="Node2D"]
script = ExtResource( 2 )
patrol_path = NodePath("Path2D/PathFollow2D")

[node name="Line2D" type="Line2D" parent="."]
width = 5.0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 80, 64 )
rotation = -1.94013e-06

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 75, 75 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="KinematicBody2D" to="." method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="KinematicBody2D" to="." method="_on_KinematicBody2D_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
